[package]
name = "mdp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bytes = "1.11.1"
order_book = { version = "0.1.0", path = "../order_book" }
protocol = { git = "https://github.com/A1tura/protocol.git", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
